# fake_huggingface_rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  benchmark.sh
scripts/: start_server.sh
src/: app_state.rs  caches.rs  main.rs  middleware.rs  resolve.rs  routes_admin.rs  routes_blake3.rs  routes_datasets.rs  routes_models.rs
src/utils/: fs_walk.rs  headers.rs  mod.rs  paths.rs  repo_json.rs  sidecar.rs
