[package]
name = "fake_huggingface_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
bytes = "1.6"
http = "1"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
once_cell = "1.19"
pathdiff = "0.2"
dunce = "1.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10"
percent-encoding = "2.3"
glob = "0.3"

[dev-dependencies]
tower = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
